--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -12,7 +12,7 @@
 
     = f.label :originalurl, "Original Url"
     = f.text_field :originalurl, :value => "http://"
-    = f.submit
+    = f.submit :class => "btn"
 
   %p Browse what other URL butchers are chopping up!
 
